tests/failures/fail-002-malformed-dim.bas
''------------------------------------------------------------------------------
'' Test vairable declaration
''
'' CHECK: __FILE__:8:8: error: expected '=' got 'End-Of-Stmt'
'' CHECK: dim foo
'' CHECK:        ^
''------------------------------------------------------------------------------
dim foo
